apps/media/radarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
